force-app/main/default/objects/Party_Address__c/Party_Address__c.object-meta.xml
<CustomObject>
    <label>Party Address</label>
    <nameField>
        <displayFormat>ADDR-{000000}</displayFormat>
        <label>Party Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Party Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>