force-app/main/default/objects/Party_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>Classification of the address (residential, registered office, principal place of business, etc.).</description>
    <label>Address Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Principal_Business</fullName>
                <label>Principal Place of Business</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <label>Registered Office</label>
            </value>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>