force-app/main/default/objects/Party_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City or locality of the address.</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>