force-app/main/default/objects/Party_Address__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this record as the primary address of its type for the party.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>