force-app/main/default/objects/Party_Address__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <description>Parent party that this address belongs to.</description>
    <label>Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>