force-app/main/default/objects/Party_Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>ZIP or postal code of the address.</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>