force-app/main/default/objects/Party_Address__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How the address was captured (manual entry vs autocomplete API).</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autocomplete_API</fullName>
                <label>Autocomplete API</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>