force-app/main/default/objects/Party_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State or province of the address.</description>
    <label>State / Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>