force-app/main/default/objects/Party_Address__c/fields/Verification_Provider__c.field-meta.xml
<CustomField>
    <fullName>Verification_Provider__c</fullName>
    <description>Provider or method used to verify the address.</description>
    <label>Verification Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>