force-app/main/default/objects/Party_Address__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this address has been verified as part of KYC checks.</description>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>