force-app/main/default/objects/Party_Address__c/fields/Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Verified_On__c</fullName>
    <description>Date when the address verification took place.</description>
    <label>Verified On</label>
    <type>Date</type>
</CustomField>